--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-
-MONGO_URI=mongodb+srv://emilianogreif:Ruso1545@mern-cluster.lejyk.mongodb.net/mern-auth?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://emilianogreif:Ruso1545@mern-cluster.lejyk.mongodb.net/?retryWrites=true&w=majority&appName=mern-cluster
 JWT_SECRET=s7h2k9gj4k1l0p2x9d8w
+   
