--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-node_modules
+# Dependencias de Node.js
+node_modules/
+package-lock.json
 
+.env
+.env.local
+.env.development
+.env.production
+
+dist/
+coverage/
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
