--- a/package.json
+++ b/package.json
@@ -14,14 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.13.8",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
-    "pdfkit": "^0.16.0",
-    "xlsx": "^0.18.5"
+    "pdfkit": "^0.16.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
