--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.3.0",
     "mongoose": "^6.13.8",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
